Fix copy, alignments, modernize UI, fix email sending

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -51,7 +51,7 @@
 	display: flex;
 	overflow: hidden;
 	height: 90vh;
-	transition: all .2s ease-in-out;
+	transition: background-image 1s linear;
 	justify-content: center;
 	background: url('https://res.cloudinary.com/dfjaln3y4/image/upload/v1595661017/bridgetlandia/marble_bg_tiny_baplot.jpg')
 		no-repeat fixed top center / cover;
@@ -86,6 +86,7 @@
 	padding-bottom: 0.5rem;
 	padding-left: 1rem;
 	padding-right: 1rem;
+	margin-top: 1rem;
 	z-index: 99;
 	position: relative;
 }
@@ -109,29 +110,12 @@
 //About section
 
 .cool {
-	height: 100vh;
+	height: 87vh;
 	display: flex;
+	background: linear-gradient(90deg, #000000 50%, #FFFFFF 50%);
+
 }
 
-.box {
-	cursor: pointer;
-	position: relative;
-	offset: 50%;
-	width: 50%;
-	height: 20%;
-	background-color: whitesmoke;
-	will-change: transform;
-	z-index: 2;
-}
-
-#profile_wrapper {
-	display: flex;
-	position: absolute;
-	align-items: flex-end;
-	justify-content: flex-end;
-	height: 78vh;
-	width: 95vw;
-}
 
 .profil {
 	display: flex;
@@ -144,11 +128,11 @@
 
 #blackandwhite {
 	display: flex;
+	margin-top: 5rem;
 	max-width: 50%;
 	align-self: flex-start;
 	height: auto;
 	z-index: 0;
-	position: relative;
 }
 
 #probe_text {
@@ -156,10 +140,8 @@
 	position: absolute;
 	align-items: flex-start;
 	justify-content: flex-start;
-	background-color: black;
 	padding: 2rem;
 	flex: 50%;
-	height: 87vh;
 }
 
 .container_welcome {
@@ -169,7 +151,6 @@
 }
 
 #Welcome {
-	background-color: black;
 	padding: 2rem;
 	flex: 50%;
 	height: 87vh;
@@ -443,22 +424,30 @@ h3 {
 //Media@
 
 @media only screen and (max-width: 768px) {
-	.box {
-		cursor: pointer;
-		position: relative;
-		offset: 50%;
-		width: 50%;
-		height: 3%;
-		background-color: white;
-		will-change: transform;
-		z-index: 2;
+
+	.cool {
+		height: 75vh;
+		display: flex;
+		background: black;
+
+	}
+
+	#probe_text {
+		display: flex;
+		position: absolute;
+		align-items: flex-start;
+		justify-content: flex-start;
+		padding: 3rem;
+		flex: 50%;
 	}
 
 	#blackandwhite {
 		display: flex;
-		margin-top: 31rem;
+		margin-top: 5rem;
+		margin-right: 4rem;
 		height: auto;
 		align-self: flex-start;
+
 	}
 
 	.profil {
@@ -466,17 +455,10 @@ h3 {
 		z-index: 0;
 		justify-content: flex-end;
 		align-self: center;
-		margin-top: 2rem;
-		height: 90vh;
+		margin-top: 3rem;
 		margin-right: 4rem;
 	}
 
-	#Welcome {
-		background-color: black;
-		padding: 2rem 2rem 2rem 1rem;
-		flex: 50% 1;
-		height: 87vh;
-	}
 	.wrapper_welcome {
 		margin-top: 4rem;
 	}
